FinFamily Release notes

At least for now releases follow the Subversion revision numbers. Numbers in the headers show download counts for the older version. Earlier release notes are in releasenotes0172

Release 850 on 7 oct 2010

* Hiski pane opening/closing refactored
* Delete person command added to drop down menu

Release 846 on 6 oct 2010

* Hiski import refactored
* Some statistics added

Release 840 on 5 oct 2010

* Refactored Hiski kastetut and vihityt
* Added genealogy data statistics

Release 830 on 1 oct 2010

* fixed bug with search criteria

Release 824 on 28 sep 2010

* Refactored Hiski kastetut import

Release 820 on 28 sep 2010

* descendant lista (excel) improvements
* hiski-import for kastetut designing

Release 810 on 25 sep 2010

* Wiki-addresses modified
* Adjusted report details
* Reset types list at start of SearchCriteria
* Ask to overwrite the file at save as
* Added check before dropping family database (schema)
* Fixes to needle management
* Fix to login failure message
* Gedcom import fixes

Release 800 on 21 sep 2010

* Hiski import fixed to lower surety for notices already existing and ignoring existing relations
* Report settings for surety to include added
* Replaced TODO with UNKN (Unknown) that now shows on db-view all persons who have UNKN notices
 

Release 794 on 18 sep 2010

* reset name and place list after use

Reset 792 on 18 sep 2010

* fixed restore of name and placelist
* modified default order of notices
* added place to hiski kastetut import
* fixed problem with excel descendant list

Release 782 on 17 sep 2010

* fixed problem that did now accept dates from person main page

Release 781 on 17 sep 2010

* fixed (fatal) bug for sync between mainperson and notices (NAME and OCCU)

Release 780 on 16 sep 2010

* fixed hiski import issues

Release 775 on 15 sep 2010

* fix to export for suku2004
* spouse numbering when children outside marriage in family improved

Release 772 on 14 sep 2010
